update molecule settings

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -8,12 +8,26 @@ lint:
 platforms:
   - name: instance
     image: centos:7
+    privileged: true
+    command: /sbin/init
 provisioner:
   name: ansible
   lint:
     name: ansible-lint
+    options:
+      L: true
+      force-color: true
 scenario:
   name: default
+  check_sequence:
+    - lint
+    - destroy
+    - dependency
+    - syntax
+    - create
+    - prepare
+    - check
+    - destroy
 verifier:
   name: testinfra
   lint:
