--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,6 +10,9 @@ services:
 
 clone_folder: /home/appveyor/projects/sample-role-for-ci-testing
 
+environment:
+  PIPENV_VERBOSITY: -1
+
 install:
   - pip install pipenv
   - pipenv sync --dev
