remove molecule check and enable diff option

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -12,6 +12,9 @@ platforms:
     command: /sbin/init
 provisioner:
   name: ansible
+  config_options:
+    diff:
+      always: true
   lint:
     name: ansible-lint
     options:
