add example usage of ansible galaxy

--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -5,3 +5,7 @@
     listen_port: 8080
   roles:
     - role: sample-role-for-ci-testing
+    - role: geerlingguy.java
+      when: "ansible_os_family == 'RedHat'"
+      java_packages:
+        - java-1.8.0-openjdk
