--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ verify_ssl = true
 ansible = "==2.7.1"
 molecule = { extras=['vagrant'], version="==2.19.0" }
 docker = "==3.5.1"
+python-vagrant = "==0.5.15"
 
 [requires]
 python_version = "2.7"
@@ -16,3 +17,5 @@ python_version = "2.7"
 [scripts]
 test = "molecule test"
 check = "molecule --debug check"
+test-local = "molecule test -s local"
+check-local = "molecule --debug check -s local"
