--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,5 +13,5 @@ steps:
       mv $(Build.SourcesDirectory) sample-role-for-ci-testing
       cd sample-role-for-ci-testing
       pip install pipenv
-      pipenv sync --dev
+      pipenv sync
       pipenv run test
