--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,8 @@
 ---
 version: 2
+
+CACHE_KEY: 'sample-v1-{{ checksum "Pipfile.lock" }}'
+
 jobs:
   build:
     machine: yes
@@ -8,10 +11,9 @@ jobs:
       PIPENV_VENV_IN_PROJECT: true
     steps:
       - checkout
-      - run: sudo chown -R circleci:circleci /usr/local/bin
 
       - restore_cache:
-          key: sample-v1-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
+          key: CACHE_KEY
 
       - run:
           command: |
@@ -19,10 +21,9 @@ jobs:
             pipenv sync
 
       - save_cache:
-          key: sample-v1-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
+          key: CACHE_KEY
           paths:
             - ".venv"
-            - "/usr/local/bin"
 
       - run:
           command: pipenv run test
