update cache setting
use cached artifacts when Pipfile.lock is not modified

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,7 +14,7 @@ environment:
   PIPENV_VERBOSITY: -1
 
 cache:
-  - /home/appveyor/venv2.7.*
+  - /home/appveyor/venv2.7.* -> Pipfile.lock
 
 install:
   - pip install pipenv
